skype id no lugar do telefone

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
 	<address>
 		<a id="email" href="mailto:contato@felipegressler.com.br">contato@felipegressler.com.br</a>
-		<a id="tel" href="tel:+5511998502884">+55 11 99850 2884</a>
+		<a href="skype:felipegressler?userinfo">Skype: felipegressler</a>
 	</address>
         
 </div>
