--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<link href="stylesheet.css" rel="stylesheet">
 	<script src="jquery-1.11.1.min.js"></script>
 
+	<!-- Begin Analytics Embed Code -->
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -35,8 +36,22 @@
 
   ga('create', 'UA-63431418-1', 'auto');
   ga('send', 'pageview');
-
 	</script>
+	
+	<!-- End Analytics Embed Code -->
+
+	<!-- Begin Inspectlet Embed Code -->
+<script type="text/javascript" id="inspectletjs">
+window.__insp = window.__insp || [];
+__insp.push(['wid', 447225776]);
+(function() {
+function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+if (window.attachEvent) window.attachEvent('onload', __ldinsp);
+else window.addEventListener('load', __ldinsp, false);
+})();
+</script>
+<!-- End Inspectlet Embed Code -->
+	
 </head>
     
 		
