--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         
 	<address>
 		<a id="email" href="mailto:contato@felipegressler.com.br">contato@felipegressler.com.br</a>
-		<a href="skype:felipegressler?userinfo">Skype: felipegressler</a>
+		<a id="skype" href="skype:felipegressler?userinfo">Skype: felipegressler</a>
 	</address>
         
 </div>
